fix spacing on logo and hamburger menu

--- a/blog-site/css/style.css
+++ b/blog-site/css/style.css
@@ -186,14 +186,14 @@ padding-top: 10px;
   height: 230px;
   width: auto;
   position: relative;
-  top: -60px;
+  top: -56px;
   right: -38px;
 }
 .fa-bars{
   width: 50px;
   height: 50px;
   position: relative;
-  top: -148px;
+  top: -146px;
   left: -250px;
 }
 #hamburger-input{
